--- a/Makefile.objs
+++ b/Makefile.objs
@@ -54,7 +54,7 @@ common-obj-y += readline.o
 common-obj-$(CONFIG_WIN32) += os-win32.o
 common-obj-$(CONFIG_POSIX) += os-posix.o
 
-common-obj-$(CONFIG_LINUX) += fsdev/
+#common-obj-$(CONFIG_LINUX) += fsdev/
 
 common-obj-y += migration.o migration-tcp.o
 common-obj-y += qemu-char.o #aio.o
@@ -89,6 +89,10 @@ common-obj-$(CONFIG_SMARTCARD_NSS) += $(libcacard-y)
 common-obj-y += qmp-marshal.o qapi-visit.o qapi-types.o
 common-obj-y += qmp.o hmp.o
 endif
+
+common-obj-y += sdl.o sdl-2.o
+common-obj-y += glib.o
+common-obj-y += pixman.o pixman-32.o pixman-64.o
 
 #######################################################################
 # Target-independent parts used in system and user emulation
